# areacodes

./: .gitignore  1984.txt  1988.txt  1989.txt  1994.txt  1997.txt  1999.txt  2000.txt  2002.txt  2004.txt  2005.txt  2006.txt  2007.txt  2014.txt  201806.txt  201807.txt  Cargo.toml  README-en.md  README.md  codes.json  diff-errata.md  diff-note.md  diff-notes.md  diff-spec-en.md  diff-spec.md  diff-syntax.md  diff.md  errata.md  note.md  package-lock.json  plate-codes.csv  result.csv  result.txt  sub-county-diff.xlsx
app/: README.md  eslint.config.ts  index.html  minify-json.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
cpp-impl/: CMakeLists.txt
cpp-impl/include/: areacodes.hpp  common.hpp  diff.hpp
cpp-impl/src/: areacodes.cpp  diff.cpp  main.cpp
csharp-impl/: Areacodes.cs  Diff.cs  Program.cs
data/: 1980.txt  1981.txt  1982.txt  1983.txt  1984.txt  1985.txt  1986.txt  1987.txt  1988.txt  1989.txt  1990.txt  1991.txt  1992.txt  1993.txt  1994.txt  1995.txt  1996.txt  1997.txt  1998.txt  1999.txt  2000.txt  2001.txt  2002.txt  2003.txt  2004.txt  2005.txt  2006.txt  2007.txt  2008.txt  2009.txt  2010.txt  2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  201810.txt  (+10 more)
diff/: 1980-1981.diff  1981-1982.diff  1982-1983.diff  1983-1984.diff  1984-1985.diff  1985-1986.diff  1986-1987.diff  1987-1988.diff  1988-1989.diff  1989-1990.diff  1990-1991.diff  1991-1992.diff  1992-1993.diff  1993-1994.diff  1994-1995.diff  1995-1996.diff  1996-1997.diff  1997-1998.diff  1998-1999.diff  1999-2000.diff  2000-2001.diff  (+41 more)
(+50 files in other folders)
